# textadept-file-diff

./: .hgtags  CMakeLists.txt  LICENSE  Makefile  README.md  diff.cxx  init.lua
.github/workflows/: release.yml
